# stockdata

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  TASK.md  compose.yaml  dev.py  down.sh  main.py  pyproject.toml  settings.py  up.sh
api/: errors.py  main.py
core/: helpers.py
db/: coverage.py  session.py
deploy/: stockdata-api.service  stockdata-beat.service  stockdata-fetcher.service  stockdata-fetcher@.service  stockdata-mcp.service
docs/: cache-strategy.md  migration-k_d-e2e.md  migration-plan.md  refactor-design.md
dotnet-mcp/: .dockerignore  Dockerfile  README.md  StockData.Mcp.slnx  TASK.md
fetcher/: app.py  beat.py  tasks.py  writer.py
mcp_shim/: main.py
scripts/: e2e-kline.sh  parity_check.py  smoke_celery.py  sync.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  settings.py
server/api/: main.py
server/api/routers/: financials.py  indices.py  macro.py  market.py  stocks.py  tasks.py
server/api/services/: dispatch.py  financial.py  kline.py  market.py  readthrough.py
server/core/: ratelimit.py  timeutil.py  watchdog.py
server/db/: coverage.py  session.py
server/db/alembic/: env.py
server/db/alembic/versions/: b531a949fc9b_initial_schema.py  b9856ff476b1_fetch_task_params_gin_index.py
server/db/models/: __init__.py  base.py  kline.py  market.py
server/deploy/: stockdata-api.service  stockdata-beat.service  stockdata-fetcher@.service  stockdata-worker.service
server/docs/: api.md  data-lifecycle.md  refactor-design.md
server/fetch_service/: __init__.py  app.py  jobs.py  worker.py
server/fetcher/: app.py  beat.py  tasks.py  worker.py  writer.py
server/fetcher/providers/: __init__.py  akshare.py  baostock.py  interface.py
server/scripts/: smoke_celery.py
server/tests/: test_coverage.py  test_readthrough_slicing.py
src/: __init__.py  data_source.py  server.py
tests/: conftest.py  fake_bs.py  fake_provider.py  test_api.py  test_api_v1.py  test_charts.py  test_coverage.py  test_db_init.py  test_engine.py  test_halt_probe.py  test_provider.py  test_ratelimit.py  test_recover.py  (+1 more)
(+191 files in other folders)
