[project]
name = "stockdata"
version = "0.1.0"
description = "stock data mcp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "baostock>=0.8.9",
    "diskcache>=5.6.3",
    "fastmcp>=3.2.0",
    "pandas>=3.0.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
