[project]
name = "stockdata"
version = "2.0.0"
description = "A股数据同步与展示：NiceGUI 单服务（Web + baostock 同步引擎）+ Typer CLI"
requires-python = ">=3.13,<3.14"
dependencies = [
    "baostock>=0.9.2",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic-settings>=2.13",
    "typer>=0.15",
    "rich>=13",
    "nicegui>=2.11",
    "httpx>=0.28",
]

[project.scripts]
stockdata = "stockdata.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
